force-app/main/default/objects/Medidor__c/Medidor__c.object-meta.xml
<CustomObject>
    <label>Medidor</label>
    <nameField>
        <label>Nome de Medidor</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Medidores</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>