force-app/main/default/objects/Medidor__c/fields/Codigo_Medidor__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Medidor__c</fullName>
    <label>Código Medidor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>