force-app/main/default/objects/Medidor__c/fields/Desconto__c.field-meta.xml
<CustomField>
    <fullName>Desconto__c</fullName>
    <label>Desconto</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>