force-app/main/default/objects/Medidor__c/fields/Distribuidora__c.field-meta.xml
<CustomField>
    <fullName>Distribuidora__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distribuidora</label>
    <referenceTo>Distributor__c</referenceTo>
    <relationshipLabel>Medidores</relationshipLabel>
    <relationshipName>Medidores</relationshipName>
    <type>Lookup</type>
</CustomField>