force-app/main/default/objects/Medidor__c/fields/Farol_Status__c.field-meta.xml
<CustomField>
    <fullName>Farol_Status__c</fullName>
    <formula>CASE(Status__c,
&quot;Online&quot;, IMAGE(&quot;/resource/1650925141000/FVerde?&quot;, &apos;&apos;,25,25),
&quot;Offline&quot;,IMAGE(&quot;/resource/1650925142000/FVermelho?&quot;, &apos;&apos;,25,25 ),
IMAGE(&quot;/resource/1650925141000/FAmarelo?&quot;, &apos;&apos;,25,25 ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Farol Status</label>
    <type>Text</type>
</CustomField>