force-app/main/default/objects/Medidor__c/fields/Plano__c.field-meta.xml
<CustomField>
    <fullName>Plano__c</fullName>
    <label>Plano</label>
    <length>100</length>
    <type>Text</type>
</CustomField>