force-app/main/default/objects/Medidor__c/fields/Teste_Online__c.field-meta.xml
<CustomField>
    <fullName>Teste_Online__c</fullName>
    <label>Teste Online</label>
    <type>Url</type>
</CustomField>