force-app/main/default/objects/Medidor__c/fields/Tipo_de_Cliente__c.field-meta.xml
<CustomField>
    <fullName>Tipo_de_Cliente__c</fullName>
    <label>Tipo de Cliente</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pessoa Física</fullName>
            </value>
            <value>
                <fullName>Pessoa Jurídica</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>