force-app/main/default/objects/Medidor__c/fields/Ultima_Atualizacao__c.field-meta.xml
<CustomField>
    <fullName>Ultima_Atualizacao__c</fullName>
    <label>Última Atualização</label>
    <type>DateTime</type>
</CustomField>