force-app/main/default/objects/Medidor__c/fields/Unidade_Id__c.field-meta.xml
<CustomField>
    <fullName>Unidade_Id__c</fullName>
    <label>Unidade Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>