force-app/main/default/objects/Medidor__c/fields/Unidades__c.field-meta.xml
<CustomField>
    <fullName>Unidades__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unidades</label>
    <referenceTo>Units__c</referenceTo>
    <relationshipLabel>Medidores</relationshipLabel>
    <relationshipName>Medidores</relationshipName>
    <type>Lookup</type>
</CustomField>